[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eks-chaos-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for chaos engineering testing on Amazon EKS clusters"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "EKS Chaos MCP Contributors"}
]
keywords = ["mcp", "eks", "chaos-engineering", "kubernetes", "aws"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.26.0",
    "kubernetes>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
eks-chaos-mcp = "eks_chaos_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/sumanthst24/EKS-Chaos-Engineering-MCP-Server"
Repository = "https://github.com/sumanthst24/EKS-Chaos-Engineering-MCP-Server"
Issues = "https://github.com/sumanthst24/EKS-Chaos-Engineering-MCP-Server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true